--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,11 @@ trigger:
 - master
 
 pool:
-  vmImage: 'macos-latest'
+  vmImage: 'windows-latest'
+  demands:
+  - MSBuild
+  - Xamarin.Android
+  - JDK
 
 variables:
   buildConfiguration: 'Release'
@@ -25,12 +29,6 @@ stages:
     - task: NuGetCommand@2
       inputs:
         restoreSolution: '$(solutionName)'
-    - task: android-manifest-version@1
-      inputs:
-        sourcePath: 'Cryptollet/Cryptollet.Android/Properties/AndroidManifest.xml'
-        versionCodeOption: 'buildid'
-        versionCode: '$(Build.BuildId)'
-        printFile: true
     - task: XamarinAndroid@1
       inputs:
         projectFile: '$(androidProject)'
@@ -70,12 +68,6 @@ stages:
       inputs:
         provisioningProfileLocation: 'secureFiles'
         provProfileSecureFile: 'Ad_Hoc_2021_02_25.mobileprovision'
-    - task: ios-bundle-version@1
-      inputs:
-        sourcePath: 'Cryptollet.iOS/Info.plist'
-        versionCodeOption: 'buildid'
-        versionCode: '$(Build.BuildId)'
-        printFile: true
     - task: XamariniOS@2
       inputs:
         solutionFile: '$(solutionName)'
@@ -137,5 +129,4 @@ stages:
         releaseNotesFile: 'releasenotes.txt'
         destinationType: 'groups'
         distributionGroupId: '0b822a6b-8ff9-46c8-91cb-459764b30d2b'
-
 
